# error_consistency

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: code-style.yml  tests.yml
src/: utils.py
src/brainscore_analysis/: README.md  ci_size.ipynb  overview.ipynb  plot_brainscore_model_differences.ipynb
src/confidence_intervals/: README.md  plot_cis.ipynb
src/demo_figure/: make_demo_figure.ipynb
src/geirhos_analysis/: README.md  aggregate_roberts_data.ipynb  analyze_bug.ipynb  bootstrap.py  bootstrap_humans.py  bootstrap_models.py  bootstrap_rebuttal.py  demo_ci_utility.ipynb  plot_model_differences.ipynb  plot_rankings.ipynb  plot_roberts_data.ipynb  run_sfs.ipynb
src/minimal_examples/: CopyProbabilityMinimalExample.py  EstimateCopyProb.py  EstimateKappa.py  EstimateUnbiasedKappa.py  MinimalExampleBootstrap.py  README.md  kappaBoundsAccuracy.py  utilsTest.py
src/significance_tests/: examples.ipynb
src/training/: README.md  aggregate_data.ipynb  config.py  enable_gpus.sh  evaluate.py  evaluate_cached.py  ffcv_dataloaders.py  requirements.txt  submit_job.sh  train.sh  train_imagenet.py
src/validation/: README.md  validate.ipynb
tests/: test_utils.py
